--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
     <string name="app_name">STLZoo</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_maps">Map</string>
+    <string name="channel_name">Notification Channel</string>
+    <string name="channel_description">Notification for STLZoo</string>
 </resources>
